--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,20 +10,26 @@ body{
 /* -------------------------
    Section Name: Navigaiton Area
   -----------***-----------*/
-nav.navbar.bootsnav ul.nav > li > a{
+.navbar-default{
+    background: #fff;
+}
+.navbar-brand > img{
+    margin-top:-17px;
+}
+nav.navbar ul > li > a{
     font-family: 'Lato',sans-serif;
     font-weight:900;
     color: #222;
     font-size: 15px;
   }
-nav.navbar.bootsnav ul.nav > li{
+nav.navbar ul > li{
     -webkit-transition: all 1s;
     -moz-transition: all 1s;
     -ms-transition: all 1s;
     -o-transition: all 1s;
     transition: all 1s;
   }
-nav.navbar.bootsnav ul.nav > li:hover:after{
+nav.navbar ul > li:hover:after{
     position: absolute;
     content: '';
     width:100%;
@@ -31,7 +37,7 @@ nav.navbar.bootsnav ul.nav > li:hover:after{
     bottom: 0;
     border-bottom: 2px solid #14A56C;
 }
-nav.navbar.bootsnav ul.nav > li > a > i{
+nav.navbar ul > li > a > i{
         background: #14A56C;
         padding: 2px 6px;
         border-radius: 100px;
@@ -50,8 +56,20 @@ nav.navbar.bootsnav{
           margin-top:10px;
       }
 }
+.navbar{
+    height: 50px;
+}
+nav.navbar{
+    margin-bottom:100px;
+}
+.breadcrumb li a {
+    font-size: 16px;
+    font-weight:800;
+}
 
-
+a{
+    cursor: pointer !important;
+}
 /* -------------------------
    Section Name: owl Slider
   -----------***-----------*/
