--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,33 +6,95 @@
 
     ==*== Created by: Meshu Debnath ==*==
 -->
+<!--
 
-<nav class="navbar navbar-default brand-center center-side bootsnav">
+<nav class="navbar navbar-default brand-center bootsnav">
 
   <div class="container">
-    <!-- Start Header Navigation -->
+
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
         <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand" routerLink="/home"><img src="assets/img/logo.jpg" class="logo" alt=""></a>
+      <a class="navbar-brand" routerLink="/login"><img src="assets/img/logo.jpg" class="logo" alt=""></a>
     </div>
-    <!-- End Header Navigation -->
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-menu">
-      <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
-        <li><a  routerLink="/home" routerLinkActive="active">Home</a></li>
-        <li><a  routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
-        <li><a (click)="$event.preventDefault()" routerLink="">About us</a></li>
-        <li><a  ><i class="fa fa-flash"></i> Start A Campaign</a></li>
-        <li><a (click)="$event.preventDefault()" routerLink="/login">Log in</a></li>
-        <li *ngIf="loginUserID != null;else signUP;"><button  (click)="logOut()">Logout</button></li>
-        <ng-template #signUP>
-          <li><a>Sign up</a></li>
-        </ng-template>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/dashboard">Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="">About us</a></li>
+        <li class="nav-item"><a class="nav-link" ><i class="fa fa-flash"></i> Start A Campaign</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/login">Log in</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="">Logout</a></li>
+
       </ul>
-    </div><!-- /.navbar-collapse -->
+    </div>
   </div>
 </nav>
+-->
 
+
+
+<nav class="navbar navbar-default navbar-fixed-top myNavbar">
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                  data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" routerLink="/login"><img src="assets/img/logo.jpg" class="logo" alt=""></a>
+
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+          <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/dashboard">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="">About us</a></li>
+            <li class="nav-item"><a class="nav-link" ><i class="fa fa-flash"></i> Start A Campaign</a></li>
+
+            <li *ngIf="loginUserID != null;else alt;" class="nav-item"><a class="nav-link" routerLink="/logout">Logout</a></li>
+            <ng-template #alt>
+              <li class="nav-item"><a class="nav-link" routerLink="/login">Log in</a></li>
+            </ng-template>
+
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div>
+    </div>
+  </div><!-- /.container-fluid -->
+
+</nav>
+
+<!--
+
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Navbar</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/dashboard">Dashboard</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="">About us</a></li>
+      <li class="nav-item"><a class="nav-link" ><i class="fa fa-flash"></i> Start A Campaign</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/login">Log in</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="">Logout</a></li>
+
+    </ul>
+
+  </div>
+</nav>
+-->
