--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="container-fluid login_area">
   <div class="container">
     <div class="row">
@@ -110,3 +112,5 @@
     </div>
   </div>
 </div>
+
+<app-footer></app-footer>
