--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -1,7 +1,13 @@
-
-
+<app-header></app-header>
+<br>
+<br><br>
 <div class="container-fluid">
     <div class="container">
+        <div class="row">
+            <ol class="breadcrumb">
+                <li  class="breadcrumb-item"><a (click)="cancle()"> <i class="fa fa-arrow-left"></i> Back</a></li>
+            </ol>
+        </div>
         <div class="row like_div">
             <div class="col-sm-7">
                 <div class="left_part thumbnail">
