--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,3 +1,98 @@
+<app-header></app-header>
+<!-- ------------*---------------
+   Section Name: slider
+   plugin:
+   Created by: Meshu Debnath
+   -------------*--------------
+-->
+<div class="container-fluid owl_slider" >
+
+  <div class="row">
+    <div class="mySlider owl-carousel">
+      <div>
+        <img src="assets/img/p1.JPG" class="img-responsive" alt="">
+
+        <div class="sliderCaption">
+          <div class="col-sm-8">
+            <h4>Cinder Grill wins $75K in Flash Funding!</h4>
+            <p>
+              Precision cooking appliance receives flash funding via the Arrow Certification Program.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="learn_more btn btn-link">LEARN MORE</a>
+          </div>
+
+        </div>
+
+      </div>
+      <div>
+        <img src="assets/img/p2.jpg" class="img-responsive" alt="">
+
+        <div class="sliderCaption">
+          <div class="col-sm-8">
+            <h4>Motu Patlu Grill wins $75K in Flash Funding!</h4>
+            <p>
+              Precision cooking appliance receives flash funding via the Arrow Certification Program.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="learn_more btn btn-link">LEARN MORE</a>
+          </div>
+
+        </div>
+      </div>
+      <div><img src="assets/img/p3.png" class="img-responsive" alt="">
+
+        <div class="sliderCaption">
+          <div class="col-sm-8">
+            <h4>Boxer Grill wins $75K in Flash Funding!</h4>
+            <p>
+              Precision cooking appliance receives flash funding via the Arrow Certification Program.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="learn_more btn btn-link">LEARN MORE</a>
+          </div>
+
+        </div>
+      </div>
+      <div>
+        <img src="assets/img/p1.JPG" class="img-responsive" alt="">
+        <div class="sliderCaption">
+          <div class="col-sm-8">
+            <h4>Cingam Grill wins $75K in Flash Funding!</h4>
+            <p>
+              Precision cooking appliance receives flash funding via the Arrow Certification Program.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="learn_more btn btn-link">LEARN MORE</a>
+          </div>
+
+        </div>
+      </div>
+      <div>
+        <img src="assets/img/p2.jpg" class="img-responsive" alt="">
+        <div class="sliderCaption">
+          <div class="col-sm-8">
+            <h4>Meshu Grill wins $75K in Flash Funding!</h4>
+            <p>
+              Precision cooking appliance receives flash funding via the Arrow Certification Program.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="learn_more btn btn-link">LEARN MORE</a>
+          </div>
+
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</div>
+
 
 
 
@@ -162,3 +257,4 @@
 </div>
 
 
+<app-footer></app-footer>
